更新GC日志